Fix font-size, line-heights and spacings for columns block

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -172,6 +172,28 @@
 
 /* Column alignment - End */
 
+.columns.columns.columns-2-cols > div > div {
+  margin-bottom:var(--regular);
+}
+
+.columns.columns-2-cols > div h2 {
+  font-size:var(--h2-base);
+  line-height: 112%;
+  text-transform: uppercase;
+  font-weight: 400;
+  margin:0
+}
+
+.columns.columns-2-cols > div h2 > strong {
+  font-weight: 700;
+}
+
+.section .columns.columns-2-cols > div > div > p {
+  font-size:var(--body-large);
+  line-height: 125%;
+  margin:0
+}
+
 @media (width >= 1024px) {
   .columns.columns-transform-teaser > div p:nth-child(1) {
     margin-bottom: 20px;
